/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(":lib")

    implementation "io.github.libsdl4j:libsdl4j:2.28.4-1.6"
}

description = "demo"

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.compileJava {
    options.compilerArgs.add("--enable-preview")
}

task("run", type: JavaExec) {

    mainClass = "com.myworldvw.webgpu.demo.Main"
    jvmArgs("--enable-preview")
    environment("RUST_BACKTRACE", "1")

    classpath = sourceSets.main.runtimeClasspath
}
